Merged pgeerkens-3.2@7842,7899,7906,7922,7930. 1) Hex-Grid Numbering for oblique and irregular numberings; 2) Attribute & AbstractAttributeListConfigurable; 3) Grid-Shearer implementation provides a 2-fixed-point shear of grid to match scanner twist. 4) Calculate hex-grid catch-buckets, for center-and-edges and for center-and-vertices, as internal hex-grids, so using the same affine-transformation calculations as the parent grid.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/branches/uckelman-integration@7972 67b53d14-2c14-4ace-a08f-0dab2b34000c